Update jdbc